<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.zhangqiaoyu.addpictures.AddPicturesActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        toolbar:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/title_addpictures"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@color/white" />

    </android.support.v7.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <!-- 显示图片 -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <!-- 设置运行多行 设置圆角图形 黑色字体-->

                    <GridView
                        android:id="@+id/gridView1"
                        android:layout_width="fill_parent"
                        android:layout_height="200dip"
                        android:layout_margin="20dip"
                        android:background="@drawable/bg_gridview"
                        android:numColumns="4"
                        android:stretchMode="columnWidth"
                        android:gravity="center" >
                    </GridView>
                    <TextView
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/hint"
                        android:gravity="center" />
                </LinearLayout>
            <!-- 底部按钮 -->
            <LinearLayout
                android:id="@+id/Layout_bottom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center" >
                <TextView
                    android:id="@+id/submitPictures"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:background="@drawable/bg_text"
                    android:gravity="center"
                    android:paddingBottom="5dip"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:paddingTop="5dip"
                    android:text="@string/submitPictures"
                    android:textAllCaps="true"
                    android:textColor="@drawable/text_selector"
                    android:textSize="20sp" />
                <TextView
                    android:id="@+id/shareToWeChat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dip"
                    android:background="@drawable/bg_text"
                    android:gravity="center"
                    android:paddingBottom="5dip"
                    android:paddingLeft="20dip"
                    android:paddingRight="20dip"
                    android:paddingTop="5dip"
                    android:text="@string/shareToWeChat"
                    android:textAllCaps="true"
                    android:textColor="@drawable/text_selector"
                    android:textSize="20sp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>

